Fix video flickering bug

--- a/packages/tv-ui/src/components/VideoItem/VideoItem.scss
+++ b/packages/tv-ui/src/components/VideoItem/VideoItem.scss
@@ -165,8 +165,6 @@
     padding-top: var(--safe-inset-top);
     padding-right: var(--safe-inset-right);
     right: 3px;
-    -webkit-transform: translateZ(1px); // Fix for weird ios bug causing video to overlap side controls
-    // https://stackoverflow.com/a/49885529
     
     display: flex;
     flex-direction: column;
@@ -241,8 +239,6 @@
     width: 100%;
     padding: 1em 5em 1em 3em;
     z-index: 1;
-    -webkit-transform: translateZ(1px); // Fix for weird ios bug causing video to overlap side controls
-    // https://stackoverflow.com/a/49885529
 
     align-self: flex-end;
     background-color: rgba(black, 0.7);
@@ -273,6 +269,11 @@
     }
   }
   
+  .ScenePlayer ~ * {
+    // Fix for weird ios bug causing video to overlap side controls. Possibly related to this: 
+    // https://bugs.webkit.org/show_bug.cgi?id=212130
+    -webkit-transform: translateZ(0);
+  }
   
   .toggleable-ui {
     position: relative;
